--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
-  <body>
-    Hello World, we are software developers!
+  <body id="main">
+    <h1 id="title">Nelson Mandela</h1>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
   </body>
