--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
   <body id="main">
     <h1 id="title">Nelson Mandela</h1>
+    <div id="img-div"> 
+      <img id="image" src="https://en.unesco.org/sites/default/files/styles/img_688x358/public/courier/photos/nelson_mandela.jpg?itok=7nYczLz5"/>
+    </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
   </body>
