--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 
   <body id="main">
     <h1 id="title">Nelson Mandela</h1>
-    <div id="img-div"> 
-      <img id="image" src="https://en.unesco.org/sites/default/files/styles/img_688x358/public/courier/photos/nelson_mandela.jpg?itok=7nYczLz5"/>
-    </div>
+    <figure id="img-div"> 
+      <img id="image" src="https://en.unesco.org/sites/default/files/styles/img_688x358/public/courier/photos/nelson_mandela.jpg?itok=7nYczLz5">
+      <figcaption id="img-caption"> The symbol of National liberation movement andindependence of the African people</figcaption>
+      </figure>
+      <div id="tribute-info">
+
+      </div>
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
   </body>
