--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div id="tribute-info">
 
       </div>
+      <a id="tribute-link" href="https://www.nelsonmandela.org/content/page/biography" target="_blank">More about Nelson Mandela</a>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
