--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
+    <link type="text/css" href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> 
+
   </head>
 
   <body id="main">
     <h1 id="title">Nelson Mandela</h1>
     <figure id="img-div"> 
       <img id="image" src="https://en.unesco.org/sites/default/files/styles/img_688x358/public/courier/photos/nelson_mandela.jpg?itok=7nYczLz5">
-      <figcaption id="img-caption"> The symbol of National liberation movement andindependence of the African people</figcaption>
+      <figcaption id="img-caption"> The symbol of National liberation movement and independence of the African people</figcaption>
       </figure>
       <div id="tribute-info">
+        <h2>The timeline of Nelson Mandela</h2>
 
       </div>
       <a id="tribute-link" href="https://www.nelsonmandela.org/content/page/biography" target="_blank">More about Nelson Mandela</a>
