--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>The timeline of Nelson Mandela</h2>
 
       </div>
-      <a id="tribute-link" href="https://www.nelsonmandela.org/content/page/biography" target="_blank">More about Nelson Mandela</a>
+      <a id="tribute-link" href="https://www.nelsonmandela.org/content/page/biography" target="_blank">Know More ...</a>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
