--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
   </head>
 
-  <body id="main">
+  <body >
+    <div id="main">
+
+    
     <h1 id="title">Nelson Mandela</h1>
     <figure id="img-div"> 
       <img id="image" src="https://en.unesco.org/sites/default/files/styles/img_688x358/public/courier/photos/nelson_mandela.jpg?itok=7nYczLz5">
@@ -80,6 +83,7 @@
 
       </div>
       <a id="tribute-link" href="https://www.nelsonmandela.org/content/page/biography" target="_blank">Know More ...</a>
+    </div>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
